bug: content behind drawer when on desktop

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,4 @@
   text-align: center;
   margin: 0;
 }
-.navbar {
-  margin-bottom: 15px;
-}
+
